Changes since version 3.2.0
---------------------------

- Added two new IceGrid properties:

    IceGrid.Registry.SessionFilters
    IceGrid.Registry.AdminSessionFilters 

  These properties allow disabling the setup of Glacier2 filters for
  IceGrid client and administrative sessions created through
  Glacier2. See the Ice manual for more information.

- Fixed object adapter activation deadlock. The deadlock could occur
  when the adapter register its endpoints with the locator registry
  and if another thread invokes concurrently on the locator.
  
- If the glacier2router can not contact the permissions verifier or
  session manager on startup it now prints a warning and continues 
  rather than exiting. These warnings are disabled if the router is
  started with the --nowarn command line option.

- Added support for protected class data members using the new
  metadata tag ["protected"]. The tag can be applied to a Slice class
  or to individual data members.

- IceGrid now emulates SIGTERM and SIGKILL signals on Windows. Sending
  SIGTERM on a Windows process generates a Ctrl+Break event and
  sending SIGKILL terminates the process.

- IceGrid now allows you to define an object adapter with a replica
  group from a different IceGrid application.

- Changed the throughput demo to better support cross-language
  testing.

- Fixed a bug in IceUtil::Cond under Windows that could cause a
  deadlock if a signal was used in conjunction with multiple waiting
  threads where at least one thread is using timedWait. Note that this
  bug also affects IceUtil::Monitor since this uses IceUtil::Cond.

- Fixed throughput performance problem on Windows that would occur
  when sending large requests.

- Added Ice.TCP.RcvSize and Ice.TCP.SndSize properties. These
  properties control the size of the TCP receive and send buffers for
  the TCP and SSL transports.

- Added support for opaque endpoints. For example:

  opaque -t 2 -v CTEyNy4wLjAuMREnAAD/////AA==
